--- a/POPs_north_sea_stats.Rmd
+++ b/POPs_north_sea_stats.Rmd
@@ -79,7 +79,7 @@ theme_set(theme_bw() +
   raw_data <- read_excel("data/20230424_nordsjoen_stepan.xlsx", skip = 1) %>%
     clean_names() %>%
     select(species, year, length_cm, fettinnhold_percent, lsi_percent, hel_vekt_g, lever_vekt_g, matches("w_w")) %>%
-    drop_na(species, year, length_cm, fettinnhold_percent, lsi_percent) %>%
+    # drop_na(species, year, length_cm, fettinnhold_percent, lsi_percent) %>%
     mutate(across(.cols = -species, .fn = ~ as.numeric(.x)))
 
   cleaned_data <- raw_data %>%
@@ -145,7 +145,7 @@ cleaned_data %>%
 
 ## Model selection
 
-To investigate if there was a time trend for any contaminants in the three gadoid species, one identical model was chosen and fitted to each different dataset (3 species x 6 contaminants = 18). Potential confounders were fish age or proxies such as fish length and fish weight as well as liver weight, liver fat content and hepatosomatic or liver somatic index (LSI). It was known that effect of these variables will differ between species, owing to their distinct physiology and feeding habits. Hence, a model was fitted to each species as comparisons between different fish species were not a priority. Due to collinearity with LSI and fish length, weight of liver and fish was omitted. Fish age was omitted due to missingness of a substantial fraction of observations and collinearity with fish length. As such, a multiple linear model including explanatory variables year, fish length, fat percentage and LSI was chosen. Two outliers were identified in LSI. Upon further investigation, it was determined that these values were the result of typographic errors during data collection. These errors were corrected during the data cleaning. 
+To investigate if there was a time trend for any contaminants in the three gadoid species, one identical model was chosen and fitted to each different dataset (3 species x 6 contaminants = 18). Potential confounders were fish age or proxies such as fish length and fish weight as well as liver weight, liver fat content and hepatosomatic or liver somatic index (LSI). It was known that effect of these variables will differ between species, owing to their distinct physiology and feeding habits. Hence, a model was fitted to each species as comparisons between different fish species were not a priority. Due to collinearity with LSI and fish length, weight of liver and fish was omitted. Fish age was omitted due to missingness of a substantial fraction of observations and collinearity with fish length. As such, a multiple linear model including explanatory variables year, fish length, fat percentage and LSI was chosen. Two outliers were identified in LSI. Upon further investigation, it was determined that these values were the result of typographic errors during data collection. These errors were corrected during the data cleaning. Additional three cods sampled in 2019 missed values for fat percentage and were not included for the statistical analyses.
 
 
 ## Model fitting
